fix middleware protect, fix hook update, write api get me, write middleware protect role
